[tool.poetry]
name = "pyob"
version = "1.0.0"
description = "A high-level runtime object manager for Python 3 and above."
authors = ["khunspoonzi <khunspoonzi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
notebook = "^6.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
